# base64-cli

./: .gitignore  Cargo.toml  README.md  build.rs  wapm.toml
.github/workflows/: rust.yml
src/: lib.rs  main.rs
