[package]
name = "base64-cli"
version = "0.1.0"
edition = "2021"
authors = ["Ken Matsui <26405363+ken-matsui@users.noreply.github.com>"]
description = "A CLI tool for base64"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ken-matsui/base64-cli/"
homepage = "https://github.com/ken-matsui/base64-cli#readme"
documentation = "https://docs.rs/base64-cli"

[lib]
crate-type = ["cdylib"]

[dependencies]
clap = { version = "3.1.2", features = ["derive"] }
base64 = "0.13.0"

[dev-dependencies]
inline-c = "0.1"

[build-dependencies]
cbindgen = "0.20"
